@@ -96,9 +96,18 @@ zone:
 	# master 2
 	allow-notify: 10.0.0.10 NOKEY
 	request-xfr: 10.0.0.10 NOKEY
-	# for a master that only speaks AXFR (like NSD) use
+
+	# By default, a slave will request a zone transfer with IXFR/TCP.
+	# If you want to make use of IXFR/UDP use
 	allow-notify: 10.0.0.11 NOKEY
-	request-xfr: AXFR 10.0.0.11 NOKEY
+	request-xfr: UDP 10.0.0.11 NOKEY
+
+	# for a master that only speaks AXFR (like NSD) use
+	allow-notify: 10.0.0.12 NOKEY
+	request-xfr: AXFR 10.0.0.12 NOKEY
+
+	# Attention: You cannot use UDP and AXFR together. AXFR is always over 
+	# TCP. If you use UDP, we higly recommend you to deploy TSIG.
 
 	# uncomment to provide AXFR to all the world
 	# provide-xfr: 0.0.0.0/0 NOKEY
