@@ -1,3 +1,6 @@
+29 August 2008: Matthijs
+	- IXFR allow UDP option
+
 26 August 2008: Matthijs
 	- Code layout, additional comments and documentation typo fixes
 	- IXFR over TCP, no longer UDP
